[DRUPAL] By zehnvor: - Fix the view of lists (e.g. here: http://www.reactos.org/node/663 - the dots are too far left), reactos-style.css - Remov some senseless definitions (to improve load performance a bit, but more to make it better readable).
svn path=/trunk/; revision=822

--- a/www/www.reactos.org/drupal/sites/all/themes/zen_reactos/css/html-reset.css
+++ b/www/www.reactos.org/drupal/sites/all/themes/zen_reactos/css/html-reset.css
@@ -267,26 +267,6 @@ tbody {
   border-top: none;
 }
 
-thead {
-}
-
-tfoot {
-}
-
-caption {
-}
-
-colgroup {
-}
-
-col {
-}
-
-tr {
-}
-
-td {
-}
 
 /*
  * Forms
@@ -300,48 +280,6 @@ fieldset {
   padding: 0.5em;
 }
 
-legend {
-}
-
-label {
-}
-
-input {
-}
-
-select {
-}
-
-optgroup {
-}
-
-option {
-}
-
-textarea {
-}
-
-button {
-}
-
-/*
- * Links
- *
- * The order of link states are based on Eric Meyer's article:
- * http://meyerweb.com/eric/thoughts/2007/06/11/who-ordered-the-link-states
- */
-a:link {
-}
-
-a:visited {
-}
-
-a:hover,
-a:focus {
-}
-
-a:active {
-}
 
 /*
  * Other inline elements
@@ -358,39 +296,3 @@ acronym {
   white-space: nowrap;
 }
 
-q {
-}
-
-cite {
-}
-
-strong, b {
-}
-
-em, i {
-}
-
-code,
-kbd,
-samp,
-tt,
-var /* Code, keyboard input, sample output, teletype, variable */ {
-}
-
-del {
-}
-
-ins {
-}
-
-big {
-}
-
-small {
-}
-
-sub {
-}
-
-sup {
-}
