--- a/www/www.reactos.org/drupal/sites/all/themes/zen_reactos/css/pages.css
+++ b/www/www.reactos.org/drupal/sites/all/themes/zen_reactos/css/pages.css
@@ -16,11 +16,6 @@ body {
   padding: 0;
 }
 
-#page-wrapper {
-}
-
-#page {
-}
 
 /*
  * The skip-link link will be completely hidden until a user tabs to the link.
@@ -39,12 +34,6 @@ body {
 /*
  * Header
  */
-#header {
-}
-
-#header .section {
-}
-
 #logo /* Wrapping link for logo */ {
   float: left; /* LTR */
   margin: 0;
@@ -87,23 +76,10 @@ div#site-name /* The name of the website */ {
 /*
  * Main (container for everything else)
  */
-#main-wrapper {
-}
-
-#main {
-}
 
 /*
  * Content
  */
-#content {
-}
-
-#content .section {
-}
-
-.region-highlighted {
-}
 
 .breadcrumb /* The path to the current page in the form of a list of links */ {
   padding-bottom: 0; /* Undo system.css */
@@ -118,13 +94,6 @@ h3.title /* Comment title */ {
   margin: 0;
 }
 
-tr.even /* Some tables have rows marked even or odd. */ {
-  /* background-color: #eee; */ /* Drupal core uses a #eee background */
-}
-
-tr.odd {
-  /* background-color: #eee; */ /* Drupal core uses a #eee background */
-}
 
 div.messages /* Important messages (status, warning, and error) for the user. See also the declarations in messages.css. */ {
   margin: 1.5em 0; /* Drupal core uses "6px 0" margin */
@@ -135,40 +104,7 @@ div.messages ul {
   margin-bottom: 0;
 }
 
-div.status /* Normal priority messages */ {
-}
 
-div.warning,
-tr.warning /* Medium priority messages */ {
-  /* border: 1px solid #f0c020; */ /* Drupal core uses: 1px solid #f0c020 */
-}
-
-div.error,
-tr.error /* High priority messages. See also the .error declaration below. */ {
-}
-
-.error /* Errors that are separate from div.messages status messages. */ {
-  /* color: #e55; */ /* Drupal core uses a #e55 background */
-}
-
-.warning /* Warnings that are separate from div.messages status messages. */ {
-  /* color: #e09010; */ /* Drupal core uses a #e09010 background */
-}
-
-div.tabs /* See also the tabs.css file. */ {
-}
-
-.region-help /* Help text on a page */ {
-}
-
-.more-help-link /* Link to more help */ {
-}
-
-.region-content /* Wrapper for the actual page content */ {
-}
-
-ul.links /* List of links */ {
-}
 
 ul.links.inline {
   display: block; /* Let the links be inline, but the container be a block. */
@@ -184,46 +120,4 @@ ul.links li {
 
 .item-list .pager li /* Each page number in the pager list */ {
   padding: 0 0.5em;
-}
-
-.feed-icon /* The link to the RSS or Atom feed for the current list of content */ {
-}
-
-.more-link /* Aggregator, blog, and forum more link */ {
-}
-
-/*
- * First sidebar (on left in LTR languages, on right in RTL)
- *
- * Remember to NOT add padding or margin to your .region-sidebar-first
- * (see the layout.css file.)
- */
-.region-sidebar-first {
-}
-
-.region-sidebar-first .section {
-}
-
-/*
- * Second sidebar (on right in LTR languages, on left in RTL)
- *
- * Remember to NOT add padding or margin to your .region-sidebar-second
- * (see the layout.css file.)
- */
-.region-sidebar-second {
-}
-
-.region-sidebar-second .section {
-}
-
-/*
- * Footer
- */
-.region-footer {
-}
-
-/*
- * Page bottom
- */
-.region-bottom /* Wrapper for any blocks placed in the page bottom region */ {
 }
